--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,12 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "malukenho/mcbumpface": true,
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
