--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/dbal": "3.3.1",
         "doctrine/doctrine-bundle": "^2.5.5",
         "doctrine/doctrine-migrations-bundle": "^3.2.1",
-        "doctrine/migrations": "^3.4.0",
+        "doctrine/migrations": "3.4.1",
         "doctrine/orm": "^2.11.0",
         "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
         "guzzlehttp/guzzle": "7.3.0",
